产品可以被停止，产品停止时，产品关联的配方也被停止